[tool.poetry]
name = "mini-gui-games"
version = "0.1.0"
description = ""
authors = ["Vasyl Boliukh <89039235+Vskesha@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
